--- a/question/1.html
+++ b/question/1.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="assets/1.css" />
   </head>
   <style>
-    /*여기에 코드를 작성해주세요!*/
+    .loginTitle {
+      color: rgb(249, 81, 118);
+    }
+    .loginDescription {
+      color: rgb(57, 35, 35);
+      font-size: 20px;
+    }
+    .loginButton {
+      background: #80ff00;
+      font-size: 18px;
+      opacity: 0.8;
+    }
   </style>
   <body>
     <div class="container">
@@ -17,18 +28,14 @@
           <div class="circle circle-one"></div>
           <div class="form-container">
             <img src="assets/1.png" alt="illustration" class="illustration" />
-            <h1 style="color: rgb(255, 0, 238)">Possibility To Reality</h1>
-            <h1 style="color: rgb(255, 255, 255); font-size: 20px">
+            <h1 class="loginTitle">Possibility To Reality</h1>
+            <h1 class="loginDescription">
               당신의 내일과 가장 가까운 오늘을 만듭니다.
             </h1>
             <form>
               <input type="text" placeholder="이름" />
               <input type="text" placeholder="학번" />
-              <button
-                style="background: #80ff00; font-size: 18px; opacity: 0.8"
-              >
-                로그인하기
-              </button>
+              <button class="loginButton">로그인하기</button>
             </form>
           </div>
           <div class="circle circle-two"></div>
