--- a/question/2.html
+++ b/question/2.html
@@ -8,12 +8,12 @@
   </head>
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+    @import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
 
     body {
       margin-top: 100px;
       background-color: antiquewhite;
-      font-family: 'Jua', sans-serif;
+      font-family: "Jua", sans-serif;
     }
 
     h1 {
@@ -25,7 +25,20 @@
       font-size: 25px;
       text-align: center;
     }
-
+    .boxStyle {
+      padding: 30px;
+      background-color: rgb(248, 183, 142);
+      border-radius: 5px;
+      max-width: 50%;
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
+    .boxStyleText {
+      font-size: medium;
+      text-align: center;
+    }
     /*여기에 코드를 작성해주세요!*/
   </style>
 
@@ -33,5 +46,11 @@
     <h1>MBTI 커뮤니티에 오신 것을 환영합니다(●'◡'●)</h1>
     <p>안녕하세요, 당신의 mbti가 궁금합니다!</p>
     <!--여기에 코드를 작성해주세요! -->
+    <div class="boxStyle">
+      <div class="boxStyleText">강명묵 INTJ</div>
+      <div class="boxStyleText">김애리 ENFP</div>
+      <div class="boxStyleText">권소현 ISTJ</div>
+      <div class="boxStyleText">김지후 INTJ</div>
+    </div>
   </body>
 </html>
