강명묵:3번문제

--- a/question/3.html
+++ b/question/3.html
@@ -8,6 +8,8 @@
   </head>
 
   <style>
+    @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
+
     * {
       margin: 0;
       padding: 0;
@@ -76,6 +78,12 @@
       font-size: 20px;
       line-height: 20px;
     }
+
+    .indie-flower-regular {
+      font-family: "Indie Flower", cursive;
+      font-weight: 400;
+      font-style: normal;
+    }
   </style>
 
   <body>
@@ -83,9 +91,9 @@
       <div id="controls">
         <a href="#" id="large">G</a>
       </div>
-      <h1>Git & GitHub</h1>
-      <h2>Git</h2>
-      <p>
+      <h1 class="indie-flower-regular">Git & GitHub</h1>
+      <h2 class="indie-flower-regular">Git</h2>
+      <p class="indie-flower-regular">
         Git is a free and open source distributed version control system
         designed to handle everything from small to very large projects with
         speed and efficiency.
